Simple Dense layer

--- a/decouverte-julia/polymorphisme.ipynb
+++ b/decouverte-julia/polymorphisme.ipynb
@@ -434,7 +434,7 @@
     "\n",
     "# création d'une liste depuis un tableau \n",
     "mklist(array::AbstractArray{T}) where T = foldr(List{T},array, init=Nil())\n",
-    "# we declare the generic T in the function signature\n",
+    "# on déclare diretctement le type T dans la signature de la fonction\n",
     "# it turns whatever the element type of the array is into a value in the function body.\n",
     "# foldr permet de traiter la collection array en créant des List{T} successivement en commençant par Nil\n",
     "\n",
