Add comments to experiments

--- a/Experiments/circlesClassification.ipynb
+++ b/Experiments/circlesClassification.ipynb
@@ -3474,6 +3474,7 @@
     }
    ],
    "source": [
+    "# plot accuracy and loss\n",
     "p1 = plot(history[\"accuracy\"],label=\"Accuracy\",legend=:topleft)\n",
     "p2 = plot(history[\"loss\"],label=\"Loss\")\n",
     "plot(p1,p2,layout=2)"
@@ -6958,6 +6959,7 @@
     }
    ],
    "source": [
+    "# Plot the decision frontier\n",
     "plot_decision_boundary(model,xData,yData)"
    ]
   }
