Clean spiral example

--- a/experiments/spiralClassification.ipynb
+++ b/experiments/spiralClassification.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create Dataset"
+    "# Spirals Classification\n",
+    "\n",
+    "Classify two spirals generated with the library SyntheticDatasets, using NNJulia.\n",
+    "\n",
+    "### Imports"
    ]
   },
   {
@@ -20,6 +24,13 @@
     "# Import NNJulia\n",
     "include(\"../src/NNJulia.jl\")\n",
     "using .NNJulia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load dataset"
    ]
   },
   {
@@ -2157,6 +2168,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create the model "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -2181,12 +2199,20 @@
     }
    ],
    "source": [
-    "# Create the model\n",
     "model = Sequential(\n",
     "        Dense(2, 16, leakyrelu),\n",
     "        Dense(16, 16, leakyrelu),\n",
     "        Dense(16, 1, sigmoid),\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train the model\n",
+    "\n",
+    "Initialise the parameters used for the training phase :"
    ]
   },
   {
@@ -2209,14 +2235,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the train data into a dataloader that will split the data into shuffled batches :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the train data into a dataloader that will split the data\n",
-    "# into shuffled batches\n",
     "trainData = DataLoader(x_train, y_train, batchsize,true);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train the model :"
    ]
   },
   {
@@ -3077,27 +3115,16 @@
     }
    ],
    "source": [
-    "# train the model\n",
     "history = train!(model, trainParams, trainData, nbEpochs)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy on test data = 97.5%\n"
-     ]
-    }
-   ],
    "source": [
-    "# evaluate the model on the test set\n",
-    "acc = evaluate(model,metrics,x_test,y_test)\n",
-    "println(\"accuracy on test data = \" * string(acc*100) * \"%\")"
+    "### Plot accuracy and loss\n",
+    "\n",
+    "Plot the evolution of the accuracy and the loss during the training phase:"
    ]
   },
   {
@@ -3449,10 +3476,41 @@
     }
    ],
    "source": [
-    "# plot accuracy and loss\n",
     "p1 = plot(history[\"accuracy\"],label=\"Accuracy\",legend=:topleft)\n",
     "p2 = plot(history[\"loss\"],label=\"Loss\")\n",
     "plot(p1,p2,layout=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy on test data = 97.5%\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc = evaluate(model,metrics,x_test,y_test)\n",
+    "println(\"accuracy on test data = \" * string(acc*100) * \"%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision boundary"
    ]
   },
   {
@@ -6891,7 +6949,6 @@
     }
    ],
    "source": [
-    "# Plot the decision frontier\n",
     "plot_decision_boundary(model,xData,yData)"
    ]
   }
