Finish mnist example

--- a/experiments/mnist_digits.ipynb
+++ b/experiments/mnist_digits.ipynb
@@ -1,18 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MNIST Classification\n",
+    "\n",
+    "Classify handwritten digits from the famous MNIST dataset generated with the library MLDatasets, using NNJulia.\n",
+    "\n",
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import Dataset loader \n",
+    "# Import libraries\n",
     "using MLDatasets\n",
     "using Plots\n",
+    "using Images\n",
     "\n",
     "# NNJulia\n",
     "include(\"../src/NNJulia.jl\")\n",
     "using .NNJulia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load dataset"
    ]
   },
   {
@@ -41,6 +60,13 @@
     "# one-hot encoding of the labels\n",
     "train_y_hot = to_one_hot(train_y)\n",
     "test_y_hot = to_one_hot(test_y);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create the model "
    ]
   },
   {
@@ -78,6 +104,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train the model\n",
+    "\n",
+    "Initialise the parameters used for the training phase :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -97,12 +132,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the train data into a dataloader that will split the data into shuffled batches :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "trainData = DataLoader(train_x, train_y_hot, batchsize,true);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train the model :"
    ]
   },
   {
@@ -156,6 +205,15 @@
    "source": [
     "# The prints does not work during training in the notebook. (use the .jl version to see the lines printed during trianing )\n",
     "history = train!(model, trainParams, trainData, nbEpochs,true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot accuracy and loss\n",
+    "\n",
+    "Plot the evolution of the accuracy and the loss during the training phase:"
    ]
   },
   {
@@ -391,6 +449,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -409,12 +474,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "using Images"
+    "Predict a random example from the test set :"
    ]
   },
   {
