Update comments, docs and add Utils in a module

--- a/examples/mnist_digits.ipynb
+++ b/examples/mnist_digits.ipynb
@@ -119,7 +119,7 @@
    "source": [
     "# Initialise the optimiser, the loss function and the metrics used to compute accuracy\n",
     "opt = GradientDescent(0.05)\n",
-    "loss = BinaryCrossentropy()\n",
+    "loss = BinaryCrossentropy() # My Implementation of BinaryCrossentropy can also be used for categorical classification\n",
     "metrics = CategoricalAccuracy()\n",
     "\n",
     "# Pass it to the TrainParameters struct that will be used during training\n",
